--- a/UtilityManagement/parser/salsanext.yml
+++ b/UtilityManagement/parser/salsanext.yml
@@ -9,7 +9,7 @@ train:
   momentum: 0.9          # sgd momentum
   lr_decay: 0.99         # learning rate decay per epoch after initial cycle (from min lr)
   w_decay: 0.0001        # weight decay
-  batch_size: 12              # batch size
+  batch_size: 12              # batch size : 12
   report_batch: 10        # every x batches, report loss
   report_epoch: 1        # every x epochs, report validation set
   epsilon_w: 0.001       # class weight w = 1 / (content + epsilon_w)
@@ -18,7 +18,7 @@ train:
     # sample images (one per batch of the last calculated batch)
   # in log folder
   show_scans: False      # show scans during training
-  workers: 4            # number of threads to get data
+  workers: 4            # number of threads to get data : 4
 
 ################################################################################
 # postproc parameters
