--- a/UtilityManagement/parser/salsanext.yml
+++ b/UtilityManagement/parser/salsanext.yml
@@ -18,7 +18,9 @@ train:
     # sample images (one per batch of the last calculated batch)
   # in log folder
   show_scans: False      # show scans during training
-  workers: 4            # number of threads to get data : 4
+  workers: 0            # number of threads to get data : 4
+test:
+  workers: 0
 
 ################################################################################
 # postproc parameters
@@ -41,10 +43,13 @@ post:
 ################################################################################
 # dataset (to find parser)
 dataset:
-  path: "/home/HONG/Semantic-KITTI/dataset"
+#  path: "/home/HONG/Semantic-KITTI/dataset"
+  path: "/Users/jinseokhong/data/SemanticKITTI/dataset/"
+  changwon_path: "/Users/jinseokhong/data/Changwon_Nonpaveload/dataset/"
   labels: "kitti"
   scans: "kitti"
   max_points: 150000 # max of any scan in dataset
+  changwon_max_point: 250000
   sensor:
     name: "HDL64"
     type: "spherical" # projective
